Closed Bug 504208 Opened 15 years ago Closed 15 years ago

nanojit: fix LInsHashSet::equals() bug

Categories

(Core :: JavaScript Engine, defect)

x86
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: n.nethercote, Assigned: n.nethercote)

References

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

Attached patch patchSplinter Review
The load cases have a typo that might cause CseFilter to miss some CSEable loads, and might also cause it to CSE some non-equivalent things.  And maybe assert() in debug builds.
Attachment #388589 - Flags: review?(graydon)
Attachment #388589 - Flags: review?(graydon) → review+
http://hg.mozilla.org/tracemonkey/rev/cc539b8a8a9d
Whiteboard: fixed-in-tracemonkey
http://hg.mozilla.org/mozilla-central/rev/cc539b8a8a9d
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
(removing "fixed-in-tracemonkey" from whiteboard, since this was fixed in mozilla-central as of comment 2)
Whiteboard: fixed-in-tracemonkey
(Restoring "fixed-in-tracemonkey" to whiteboard after talking to sayrer in IRC -- I misunderstood the purpose of the keyword.  Sorry for bugspam)
Whiteboard: fixed-in-tracemonkey
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: