Bug 504208: fix LInsHashSet::equals().  r=graydon.